# src/app/api/user/route.ts
@@ -3,31 +3,24 @@ import prisma from "@/lib/db/prisma";
 import { headers } from "next/headers";
 import { NextResponse } from "next/server";
 
-export const POST = async (request: Request) => {
+export const GET = async () => {
   const session = await auth.api.getSession({
     headers: await headers(),
   });
   if (!session) {
     return NextResponse.json({ error: "unauthorized" }, { status: 401 });
   }
-
-  const bio : string = await request.json();
-
   try {
-    await prisma.user.update({
+    const user = await prisma.user.findUnique({
       where: { id: session.user.id },
-      data: {  bio },
     });
 
-    return NextResponse.json(
-      { success: "Bio updated successfully" },
-      { status: 200 }
-    );
+    if (!user) {
+      return NextResponse.json({ error: "User not found" }, { status: 404 });
+    }
+    return NextResponse.json(user, { status: 200 });
   } catch (err) {
     console.error(err);
-    return NextResponse.json(
-      { error: "Failed to update bio" },
-      { status: 500 }
-    );
+    return NextResponse.json({ error: "Failed to get user" }, { status: 500 });
   }
 };
